# varject

./: LICENSE  README.md  setup.cfg
src/varject/: __init__.py  __main__.py  core_fnc.py  quotes_handling.py
