[metadata]
name = varject
version = 1.1.0
author = Kyrela
description = A simple and dynamic configuration file system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyrela/varject
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src